spacing fix

--- a/itis3135/projects/client/styles/cloudburst.css
+++ b/itis3135/projects/client/styles/cloudburst.css
@@ -99,11 +99,6 @@ nav a {
 
 /* cloudburst layout */
 
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
 .page-container {
   display: flex;
   width: 100%;
@@ -115,7 +110,7 @@ html, body {
 }
 
 .left-column {
-  flex: 0 0 70%;
+  flex: 0 0 74%;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -124,22 +119,22 @@ html, body {
 }
 
 .left-column img {
-  width: 90%;
-  height: 90%;
+  width: 95%;
+  height: 95%;
   flex: 1;
   object-fit: cover;
   border-radius: 15px;
 }
 
 .right-column {
-  flex: 0 0 30%;
+  flex: 0 0 26%;
   flex-direction: column;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   padding: 0 60px;
   background-color: #fff;
-  min-height: 100vh;
+  min-height: auto;
   font-family: 'Poppins', sans-serif;
   height: 100%;
 }
